--- a/trunk/dom/dom.vcproj
+++ b/trunk/dom/dom.vcproj
@@ -15,8 +15,9 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -35,6 +36,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="../,../extern/include"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -46,13 +48,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -62,12 +61,6 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -141,6 +134,22 @@
 			</File>
 			<File
 				RelativePath=".\event.h"
+				>
+			</File>
+			<File
+				RelativePath=".\eventnames.h"
+				>
+			</File>
+			<File
+				RelativePath=".\eventtypes.h"
+				>
+			</File>
+			<File
+				RelativePath=".\mutationevent.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\mutationevent.h"
 				>
 			</File>
 			<File
